--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,4 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:id="@+id/container"
     android:layout_width="match_parent" android:layout_height="match_parent"
     tools:context=".MainActivity" tools:ignore="MergeRootFrame"
@@ -11,5 +11,16 @@
         android:text="PRIMETIME4U"
         android:id="@+id/textView"
         android:layout_gravity="center"
-        android:textColor="#ffd7d6ff" />
-</FrameLayout>
+        android:textColor="#ffd7d6ff"
+        android:layout_above="@+id/listView"
+        android:layout_centerHorizontal="true" />
+
+    <ListView
+        android:layout_width="250dp"
+        android:layout_height="400dp"
+        android:id="@+id/listView"
+        android:layout_gravity="left|top"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
+
+</RelativeLayout>
