Added MaterialList library

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -22,5 +22,5 @@
         android:theme="@style/Widget.AppCompat.Light.ActionButton"
         style="@style/Base.TextAppearance.AppCompat.Button"
         android:background="#ffffffff"
-        android:shadowColor="#ffacbbff" />
+        android:singleLine="true" />
 </RelativeLayout>
