--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools" android:id="@+id/container"
     android:layout_width="match_parent" android:layout_height="match_parent"
     tools:context=".MainActivity" tools:ignore="MergeRootFrame"
-    android:background="#ffc0c1ff" >
+    android:background="#ffffffff" >
 
     <TextView
         android:layout_width="wrap_content"
@@ -16,21 +16,11 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="77dp" />
 
-    <ListView
-        android:layout_width="250dp"
-        android:layout_height="100dp"
-        android:id="@+id/listView"
-        android:layout_gravity="left|top"
-        android:layout_below="@+id/textView"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="41dp" />
 
-    <WebView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/webView"
-        android:layout_below="@+id/listView"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="71dp" />
+    <com.dexafree.materialList.view.MaterialListView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:id="@+id/material_listview"/>
+
 
 </RelativeLayout>
