--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,8 @@
     <com.dexafree.materialList.view.MaterialListView
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:id="@+id/material_listview"/>
+        android:id="@+id/material_listview"
+        android:layout_alignTop="@+id/textView" />
 
 
 </RelativeLayout>
