--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:text="PRIMETIME4U"
         android:id="@+id/textView"
         android:layout_gravity="center"
-        android:textColor="#ffd7d6ff"
+        android:textColor="#2F64F6"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="77dp" />
@@ -21,7 +21,7 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:id="@+id/material_listview"
-        android:layout_alignTop="@+id/textView" />
+        android:layout_alignParentTop="true" />
 
 
 </RelativeLayout>
